# Image-filtering

./: LICENSE  README.md  pyproject.toml  requirements.txt  timing-report.txt
.github/workflows/: python-publish.yml
instapy/: numba_filters.py  numpy_filters.py  python_filters.py  timing.py
instapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_numba.py  test_numpy.py  test_python.py
